--- a/hw2/makefile
+++ b/hw2/makefile
@@ -3,3 +3,6 @@ TestSprite.exe: Sprite.cs TestSprite.cs Point.cs
 
 TestPoint.exe: Point.cs TestPoint.cs
 	mcs TestPoint.cs Point.cs
+
+clean:
+	rm *.exe
